--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,7 +22,7 @@
     </p>
     <ul>
       <li>
-        Element system to create alerts for
+        Alerts system for
         <ul>
           <li>Channel points</li>
           <li>Bits cheered</li>
