alerts.events -> alerts.elements

--- a/src/app/dashboard/twitch/alerts/alerts.component.scss
+++ b/src/app/dashboard/twitch/alerts/alerts.component.scss
@@ -99,11 +99,11 @@ input {
 }
 
 
-.events-body {
+.elements-body {
     background-color: $inner-background;
     padding: 0;
 }
-.event-error {
+.element-error {
     background-color: var(--card-header-danger-background-color);
     text-align: center;
     font-weight: bold;
