--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -10,10 +10,10 @@
       First steps
     </h5>
     <p>
-      Start by <a routerLink="twitch/api">enabling Twitch APIs</a> in order to receive event data from twitch.
+      Start by <a routerLink="twitch/api">enabling Twitch APIs</a> in order to receive events data from twitch.
     </p>
     <p>
-      Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your events up.
+      Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.
     </p>
     <p>
       The <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality works but it's kinda complicated to set-up and the user interface is not intuitive yet...
