--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -10,7 +10,7 @@
       First steps
     </h5>
     <p>
-      Start by <a routerLink="twitch/api">enabling Twitch APIs</a> in order to receive events data from twitch.
+      Start by <a routerLink="twitch/api">enabling Twitch API connections</a> in order to receive events data from twitch.
     </p>
     <p>
       Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.
