--- a/src/themes.scss
+++ b/src/themes.scss
@@ -215,15 +215,10 @@ nb-menu > ul {
   margin-bottom: 4.1rem !important;
 }
 
-nb-sidebar.loaded.expanded {
-  transition: 0.3s ease;
-  * {
-    transition: 0.3s ease;
-  }
-} 
+nb-sidebar.loaded.expanded,
 nb-sidebar.loaded.collapsed {
   transition: 0.3s ease;
   * {
     transition: 0.3s ease;
   }
-}
+} 
