--- a/src/themes.scss
+++ b/src/themes.scss
@@ -218,7 +218,7 @@ nb-menu > ul {
 nb-sidebar.loaded.expanded,
 nb-sidebar.loaded.collapsed {
   transition: 0.3s ease;
-  * {
+  > div {
     transition: 0.3s ease;
   }
 } 
