--- a/src/themes.scss
+++ b/src/themes.scss
@@ -64,6 +64,8 @@ $nb-themes: nb-register-theme((
   select-min-width: 100px,
   select-small-max-width: 100px,
   select-medium-max-width: 180px,
+
+  popover-background-color: #00d68f,
   
 ), ccarbn, cosmic);
 
@@ -194,13 +196,19 @@ nb-select.size-medium:not(.full-width) {
     top: calc(50% - 10px);
     transition: 0.3s;
   }
-  > nb-icon:first-child:hover {
+  > nb-icon:nth-child(2) {
+    position: absolute;
+    right: -2rem;
+    top: calc(50% - 10px);
+    transition: 0.3s;
+  }
+  > nb-icon:hover {
     transform-origin: center;
     transform: scale(1.25);
     filter: drop-shadow(0 0 6px white);
     transition: 0.3s;
   }
-  > *:not(:first-child) {
+  > *:not(nb-icon) {
     filter: blur(5px) drop-shadow(2px 4px 6px #000000A0);
     pointer-events: none;
   }
