--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -37,6 +37,14 @@
         Browser source capable of receiving said events and more
       </li>
       <li>
+        Stream Deck plugin to
+        <ul>
+          <li>
+            Send your alerts to the Browser Source
+          </li>
+        </ul>
+      </li>
+      <li>
         Chatbot with the following functionalities
         <ul>
           <li>Basic common commands</li>
