--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,6 +1,14 @@
-<span class="created-by">
- <small>©</small> {{year}} eltharynd
-</span>
+
+<div>
+  <span class="created-by">
+    <small>©</small> {{year}} eltharynd
+   </span>
+   &nbsp;&nbsp;|&nbsp;&nbsp;
+   <a [routerLink]="['/privacy']">
+     privacy
+   </a>
+</div>
+
 <div class="socials">
   <a href="https://twitch.tv/eltharynd" target="_blank"><i class="fab fa-twitch"></i></a>
   <a href="https://www.github.com/eltharynd/cCarbn" target="_blank"><i class="fab fa-github"></i></a>
