--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,29 +1,27 @@
 <nb-card class="centered">
   <nb-card-header class="card-header">
     <div class="composed-title">
-      <strong class="text-title">Welcome to cCarbn.io</strong>
+      <strong class="text-title">Dashboard</strong>
       <span class="text-description">For the best experience, use this on desktop</span>
     </div>
   </nb-card-header>
   <nb-card-body>
-    <h5>
+    <h2>
       First steps
-    </h5>
+    </h2>
     <p>
-      Start by <a routerLink="twitch/api">enabling Twitch API connections</a> in order to receive events data from twitch.
-    </p>
-    <p>
-      Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.
-    </p>
-    <p>
-      The <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality works but it's kinda complicated to set-up and the user interface is not intuitive yet...
-    </p>
-    <p>
+      Start by <a routerLink="twitch/api">enabling Twitch API connections</a> in order to receive events data from twitch.<br/>
+      <br/>
+      Then go to <a routerLink="twitch/alerts">Alerts</a> in order to set your event alerts up.<br/>
+      <br/>
+      The <a routerLink="/browsersource/hypetrain">Hype Train</a> functionality works but it's kinda complicated to set-up and the user interface is not intuitive yet...<br/>
+      <br/>
       Check out what the <a routerLink="twitch/chatbot">Chatbot</a> can do for you...
     </p>
     
   </nb-card-body>
   <nb-card-footer>
+    <h2>Support</h2>
     <p>
       Seek help on the <a href="https://discord.gg/uTmEUxGHKC" target="_blank">discord</a> if you need support.
     </p>
