--- a/src/app/corporate/privacy/privacy.component.html
+++ b/src/app/corporate/privacy/privacy.component.html
@@ -244,7 +244,7 @@
                 The natural person to whom the Personal Data refers.
             </p>
             
-            <h3>Data Processor (or Data Supervisor)c</h3>
+            <h3>Data Processor (or Data Supervisor)</h3>
             <p>
                 The natural or legal person, public authority, agency or other body which processes Personal Data on behalf of the Controller, as described in this privacy policy.
             </p>
