--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -5,10 +5,10 @@
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
     
-    <a class="logo" href="#" (click)="navigateHome()">
-      <img src="assets/brand/logo-white.svg" alt="cCarbn">
+
+      <img [routerLink]="['/dashboard']" src="assets/brand/logo-white.svg" class="logo" alt="cCarbn">
       <!-- <span>cCarbn</span> -->
-    </a>
+
   </div>
 </div>
 
