--- a/src/app/corporate/home/home.component.html
+++ b/src/app/corporate/home/home.component.html
@@ -25,7 +25,7 @@
 
 
 
-<div class="centered subhero">
+<div @fadeIn class="centered subhero">
   <h2 id="what-it-can-do">What it can do</h2>
   <div class="whatitcando">
     <div>
@@ -99,7 +99,7 @@
 
 
 
-<div class="centered subhero">
+<div @fadeIn class="centered subhero">
   <h2 id="additional-features">Additional Features</h2>
   <div class="text-subhero">
     <h3>Hype Train</h3>
@@ -112,7 +112,7 @@
 
 
 
-<div class="centered subhero">
+<div @fadeIn class="centered subhero">
   <h2 id="coming-soon">Coming Soon...</h2>
   <div class="text-subhero">
     <h3>Channel editors</h3>
