--- a/src/app/corporate/home/home.component.scss
+++ b/src/app/corporate/home/home.component.scss
@@ -130,8 +130,8 @@
 
         > div:hover {
             transition: .3s ease;
-            transform: scale(1.15);
-            z-index: 1;;
+            transform: scale(1.08);
+            z-index: 1;
         }
     }
 }
