--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -6,7 +6,7 @@
     </a>
     
 
-      <img [routerLink]="['/dashboard']" src="assets/brand/logo-white.svg" class="logo" alt="cCarbn">
+      <img [routerLink]="['/']" src="assets/brand/logo-white.svg" class="logo" alt="cCarbn">
       <!-- <span>cCarbn</span> -->
 
   </div>
