--- a/src/app/dashboard/twitch/chatbot/chatbot.component.html
+++ b/src/app/dashboard/twitch/chatbot/chatbot.component.html
@@ -47,7 +47,7 @@
       <div class="composed-title storeable-header">
         <strong class="text-title-sub">Options that can be added to &lt;answer&gt;</strong>
         <span class="text-description-sub">
-          You can use set these options to define various settings
+          You can use these options to define various settings
         </span>
       </div>
       <nb-list>
