fixed some SEO shit

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,18 +5,18 @@
   <nb-card-header>
     <img src="assets/brand/logo-white.png">
     <div>
-      <h2>Welcome to cCarbn</h2>
+      <h1>Log into cCarbn</h1>
       <ng-template *ngIf="false else login"></ng-template>
     </div>
   </nb-card-header>
 
   <nb-card-body>
-    <h3>What is cCarbn</h3>
+    <h2>What is cCarbn</h2>
     <p>
       Interact with Twitch events and chat
       via Browser-Source-ready dynamic pages or chatbot.
     </p>
-    <h3>Features</h3>
+    <h2>Features</h2>
     <p>
       cCarbn is still in development but the following features are already implemented and working correctly:
     </p>
@@ -58,12 +58,12 @@
       More features gets added very frequently so stay tuned for more soon.
     </p>
 
-    <h3>Where to get support?</h3>
+    <h2>Where to get support?</h2>
     <p>
       You can find us on <a href="https://discord.gg/uTmEUxGHKC">discord</a> or <a href="https://www.github.com/eltharynd/cCarbn">github</a>
     </p>
 
-    <h3>Buy me a coffee</h3>
+    <h2>Buy me a coffee</h2>
     <p>
       If you appreciate my work and you wanna buy me a coffee 
       you can use the <a href="https://github.com/sponsors/eltharynd">github sponsors</a> page 
