--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,8 +1,8 @@
 <nb-card class="centered">
   <nb-card-header class="card-header">
     <div class="composed-title">
-      <strong class="text-title">Dashboard</strong>
-      <span class="text-description">For the best experience, use this on desktop</span>
+      <h1 class="text-title">Dashboard</h1>
+      <p class="text-description">For the best experience, use this on desktop</p>
     </div>
   </nb-card-header>
   <nb-card-body>
