--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -14,8 +14,8 @@
 
 <div class="header-container">
   <nb-actions size="small" *ngIf="auth.currentUser">
-    <nb-action class="control-item" icon="email-outline"></nb-action>
-    <nb-action class="control-item" icon="bell-outline"></nb-action>
+<!--     <nb-action class="control-item" icon="email-outline"></nb-action>
+    <nb-action class="control-item" icon="bell-outline"></nb-action> -->
     <nb-action class="user-action">
       <nb-user *ngIf="auth.currentUser" 
                [nbContextMenu]="userMenu"
