--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -22,7 +22,7 @@ nb-card-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3rem 1rem;
+  padding: 1rem;
 }
 @media only screen and (min-width: 825px) {
   .login-container {
